--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,84 @@
+aiohttp==3.8.4
 aioredis==2.0.1
+aiosignal==1.3.1
 anyio==3.6.2
 async-timeout==4.0.2
-beautifulsoup4==4.12.2
+attrs==22.2.0
+Automat==22.10.0
+beautifulsoup4==4.11.1
 certifi==2022.12.7
-charset-normalizer==3.1.0
+cffi==1.15.1
+charset-normalizer==3.0.1
 click==8.1.3
-fastapi==0.95.0
+colorama==0.4.6
+constantly==15.1.0
+cryptography==39.0.0
+cssselect==1.2.0
+executiontime==0.3.1
+fastapi==0.89.1
+fastapi-restful==0.4.3
+filelock==3.9.0
+flasgger==0.9.5
+Flask==2.2.2
+frozenlist==1.3.3
 h11==0.14.0
+httpcore==0.16.3
 httptools==0.5.0
+httpx==0.23.3
+hyperlink==21.0.0
 idna==3.4
-pydantic==1.10.7
-python-dotenv==1.0.0
+incremental==22.10.0
+iniconfig==2.0.0
+install==1.3.5
+itemadapter==0.7.0
+itemloaders==1.0.6
+itsdangerous==2.1.2
+Jinja2==3.1.2
+jmespath==1.0.1
+jsonschema==4.17.3
+lxml==4.9.2
+MarkupSafe==2.1.2
+mistune==2.0.4
+multidict==6.0.4
+packaging==23.0
+parsel==1.7.0
+pluggy==1.0.0
+Protego==0.2.1
+psutil==5.9.4
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+pydantic==1.10.4
+PyDispatcher==2.0.6
+pyOpenSSL==23.0.0
+pyrsistent==0.19.3
+pytest==7.2.2
+pytest-asyncio==0.20.3
+python-dotenv==0.21.1
 PyYAML==6.0
+queuelib==1.6.2
+redis==4.5.1
+rediscache==0.1.2
 requests==2.28.2
+requests-file==1.5.1
+rfc3986==1.5.0
+routers==0.10.1
+schedule==1.1.0
+Scrapy==2.7.1
+service-identity==21.1.0
+six==1.16.0
 sniffio==1.3.0
-soupsieve==2.4
-starlette==0.26.1
-typing_extensions==4.5.0
-urllib3==1.26.15
-uvicorn==0.21.1
+soupsieve==2.3.2.post1
+starlette==0.22.0
+tldextract==3.4.0
+Twisted==22.10.0
+typing_extensions==4.4.0
+urllib3==1.26.14
+uvicorn==0.20.0
 uvloop==0.17.0
-watchfiles==0.19.0
-websockets==11.0.1
+w3lib==2.1.1
+watchfiles==0.18.1
+websockets==10.4
+Werkzeug==2.2.2
+yarl==1.8.2
+zope.interface==5.5.2
