--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,12 @@ aiohttp==3.8.4
 aioredis==2.0.1
 aiosignal==1.3.1
 anyio==3.6.2
+appdirs==1.4.4
 async-timeout==4.0.2
 attrs==22.2.0
 Automat==22.10.0
 beautifulsoup4==4.11.1
+bs4==0.0.1
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.0.1
@@ -15,18 +17,23 @@ constantly==15.1.0
 cryptography==39.0.0
 cssselect==1.2.0
 executiontime==0.3.1
+fake-useragent==1.1.3
 fastapi==0.89.1
 fastapi-restful==0.4.3
 filelock==3.9.0
 flasgger==0.9.5
 Flask==2.2.2
 frozenlist==1.3.3
+gevent==22.10.2
+greenlet==2.0.2
+grequests==0.6.0
 h11==0.14.0
 httpcore==0.16.3
 httptools==0.5.0
 httpx==0.23.3
 hyperlink==21.0.0
 idna==3.4
+importlib-metadata==6.2.1
 incremental==22.10.0
 iniconfig==2.0.0
 install==1.3.5
@@ -41,6 +48,7 @@ MarkupSafe==2.1.2
 mistune==2.0.4
 multidict==6.0.4
 packaging==23.0
+parse==1.19.0
 parsel==1.7.0
 pluggy==1.0.0
 Protego==0.2.1
@@ -50,7 +58,10 @@ pyasn1-modules==0.2.8
 pycparser==2.21
 pydantic==1.10.4
 PyDispatcher==2.0.6
+pyee==8.2.2
 pyOpenSSL==23.0.0
+pyppeteer==1.0.2
+pyquery==2.0.0
 pyrsistent==0.19.3
 pytest==7.2.2
 pytest-asyncio==0.20.3
@@ -61,6 +72,7 @@ redis==4.5.1
 rediscache==0.1.2
 requests==2.28.2
 requests-file==1.5.1
+requests-html==0.10.0
 rfc3986==1.5.0
 routers==0.10.1
 schedule==1.1.0
@@ -71,6 +83,7 @@ sniffio==1.3.0
 soupsieve==2.3.2.post1
 starlette==0.22.0
 tldextract==3.4.0
+tqdm==4.65.0
 Twisted==22.10.0
 typing_extensions==4.4.0
 urllib3==1.26.14
@@ -81,4 +94,6 @@ watchfiles==0.18.1
 websockets==10.4
 Werkzeug==2.2.2
 yarl==1.8.2
+zipp==3.15.0
+zope.event==4.6
 zope.interface==5.5.2
